--- a/app.yml
+++ b/app.yml
@@ -3,4 +3,5 @@
   hosts: all
   remote_user: pi
   tasks:
+    - synchronize: src=./package.json dest=~/
     - synchronize: src=src/ dest=~/sandbox
